[package]
name = "syndrome_decoding_problem"
version = "0.1.0"
authors = ["kyzdra <kyzdra@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
main_error = "0.1.0"
mceliece = { path = "../mceliece" }
